--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div class="container">
   <div id="countdown" class="flex-list">
     <ul>
-      <li><span id="days"></span>days</li>
+      <li><span id="days"></span>Days</li>
       <li><span id="hours"></span>Hours</li>
       <li><span id="minutes"></span>Minutes</li>
       <li><span id="seconds"></span>Seconds</li>
